# 1c-processor-generator-pro

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
1c_processor_generator/: __init__.py  __main__.py  _ext_conn.py  _protected.py  _protected.pyd  _tester.py  _validator.py  assertion_helper.py  bsl_differ.py  bsl_injector.py  bsl_splitter.py  change_mapper.py  constants.py  epf_compiler.py  generator.py  id_allocator.py  metadata_analyzer.py  models.py  query_text_parser.py  requirements.txt  svg_converter.py  template_xml_generator.py  test_parser.py  validators.py  xml_differ.py  yaml_comment_utils.py  yaml_parser.py  yaml_patcher.py  yaml_schema.json
1c_processor_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
1c_processor_generator/parsing/: elements.py  schemas.py
1c_processor_generator/pro/: LICENSE  __init__.py  _bsp.pyd  _ccm.pyd  _cg.pyd  _cloud.pyd  _const.pyd  _df.pyd  _ec.pyd  _ep.pyd  _ex.pyd  _gc.pyd  _lc.pyd  _legacy.pyd  _lic.pyd  _lp.pyd  _pim.pyd  _remote.pyd  _u.pyd  _v1_compat.pyd  _wm.pyd  _xc.pyd  excel_reader.py  excel_to_mxl.py
1c_processor_generator/resources/: validator.epf  validator_config.yaml  validator_handlers.bsl  validator_object_module.bsl
1c_processor_generator/sync/: base_handler.py  registry.py
1c_processor_generator/sync/handlers/: command.py  form_parameter.py  tabular_section.py  value_table.py
1c_processor_generator/templates/: catalog_minimal.xml.j2  common_module_bsl_stub.bsl.j2  common_module_stub.xml.j2  common_picture_ext.xml.j2  common_picture_minimal.xml.j2  configuration_root.xml.j2  conftest.py.j2  document_minimal.xml.j2  english.xml.j2  form.xml.j2  form_meta.xml.j2  language.xml.j2  processor.xml.j2  template_meta.xml.j2  test_file.py.j2
1c_processor_generator/templates/macros/: _common.j2  _elements.j2
docs/: CHEATSHEET.md  LLM_BSP_PRINT_FORMS.md  LLM_CLI_GUIDE.md  LLM_CORE.md  LLM_DATA_GUIDE.md  LLM_HTML_GUIDE.md  LLM_PATTERNS_ESSENTIAL.md  LLM_PRACTICES.md  LLM_STYLING.md  LLM_SYNC_GUIDE.md  LLM_TESTING_WORKFLOW.md  LLM_WEB_LITE.md  QUICK_REFERENCE.md  RESEARCH_WEB_CHATS.md  UI_EXCELLENCE_GUIDE.md  WEB_CHAT_GUIDE.md  WEB_QUICK_START.md  feature_registry.json
docs/reference/: ADVANCED_FEATURES.md  ALL_PATTERNS.md  API_REFERENCE.md  CONDITIONAL_APPEARANCE.md  TABLE_STYLING.md  TROUBLESHOOTING.md  WEB_PATTERNS.md
examples/yaml/: config.yaml  handlers.bsl
examples/yaml/bsp_print_form/: README.md  config.yaml
examples/yaml/bsp_print_form_excel/: config.yaml  create_template.py  handlers.bsl
examples/yaml/business_card_demo/: config.yaml
examples/yaml/calculator_with_tests/: README.md  config.yaml  handlers.bsl
examples/yaml/chess_board_spreadsheet/: config.yaml  handlers.bsl
examples/yaml/chess_board_table/: config.yaml  handlers.bsl
examples/yaml/column_group_example/: README.md  config.yaml  handlers.bsl
examples/yaml/compact_multilang_demo/: config.yaml  handlers.bsl
examples/yaml/complex_dynamic_list/: config.yaml
examples/yaml/contact_center_lite/: README.md  config.yaml  handlers.bsl
examples/yaml/data_import/: README.md  config.yaml
examples/yaml/documentation_region_example/: README.md  config.yaml  handlers.bsl
examples/yaml/dynamic_list_complex/: config.yaml
examples/yaml/dynamic_list_minimal/: config.yaml
examples/yaml/dynamic_list_simple/: config.yaml
examples/yaml/english_language_demo/: README.md  config.yaml  handlers.bsl
examples/yaml/form_elements_demo/: README.md  config.yaml
skills/1c-processor-generator/: SKILL.md
templates/claude_project/: README.md  project_instructions.md
templates/custom_gpt/: README.md  instructions.md  knowledge_base.md  openapi-gpt-action.yaml  patcher_guide.md  styling_guide.md
(+376 files in other folders)
